# SUM

./: .coveragerc  .dockerignore  .env.example  .gitignore  .master_key  .replit  ADAPTIVE_COMPRESSION.md  AI_FEATURES.md  API_AUTHENTICATION.md  API_DOCUMENTATION.md  ARCHITECTURE_OPTIMIZED.md  AUDIT_REPORT.md  CARMACK_LINUS_REVIEW.md  CHANGELOG.md  CHANGELOG_V2.md  CLAUDE.md  CODE_CITATIONS.md  CODING_STANDARDS.md  CONTRIBUTING.md  COSMIC_MANIFEST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DOCKER.md  Dockerfile  Dockerfile.intelligence  Dockerfile.simple  ENHANCEMENT_SUMMARY.md  HONEST_ASSESSMENT.md  IMPLEMENTATION_ROADMAP.md  INSTALLATION.md  KNOWLEDGE_OS_SUMMARY.md  LEGENDARY_QUICKSTART.md  LICENSE  MANIFESTO.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_V2.md  MULTIMODAL_SETUP.md  Makefile  NAMING_CONVENTION_STANDARD.md  NAMING_CONVENTION_SUMMARY.md  (+189 more)
.github/: dependabot.yml  pull_request_template.md
.idx/: dev.nix
Data/: data.json  knowledge_base.json
Models/: summarizer.py  topic_modeling.py
Tests/: __init__.py  conftest.py  test_128bit_parity.py  test_adversarial_bundles.py  test_akashic_prov_o.py  test_akashic_replay.py  test_api_endpoints.py  test_audit_log.py  test_bench_model_resolution.py  test_browser_extension.py  test_bundle_axiom_graph_entropy.py  test_bundle_consistency_check.py  test_bundle_corruption_score.py  test_bundle_distribution_mmd.py  test_bundle_distribution_mmd_threshold.py  test_bundle_entropy_ci.py  test_bundle_similarity_lsh.py  test_caching.py  test_causal_cascade.py  test_chunked_state_composition.py  test_cli.py  test_comprehensive.py  test_comprehensive_suite.py  test_concurrency_safety.py  test_confidence_calibrator.py  test_config_manager.py  test_conformal.py  test_conformal_risk_control.py  test_cross_instance.py  test_deterministic_arbiter.py  test_differential_cross_runtime_fuzz.py  test_ed25519_attestation.py  test_epistemic_loop.py  test_error_handling.py  test_evidence_chain.py  test_evidence_enrichment.py  test_evidence_rules.py  test_extraction_adversarial.py  test_extraction_harness.py  test_extraction_validator.py  (+137 more)
Utils/: README.md  cache.py  circuit_breaker.py  config_validator.py  data_loader.py  database_pool.py  error_handling.py  error_handling_fix.py  error_recovery.py  nltk_utils.py  request_queue.py  streaming_file_processor.py  text_preprocessing.py  universal_file_processor.py
api/: __init__.py  ai_models.py  async_file_processing.py  auth.py  auth_routes.py  circuit_breaker_integration.py  collaborative_intelligence.py  compression.py  crystallization.py  extrapolation.py  feedback_api.py  file_processing.py  health.py  invisible_ai.py  knowledge_os.py  legendary.py  mass_processing.py  memory_api.py  quantum_router.py  robust_file_processing.py  streaming.py  summarization.py  web_compatibility.py
application/: __init__.py  adaptive_expander.py  advanced_summarizer.py  async_pipeline.py  basic_summarizer.py  core_summarizer.py  feedback_system.py  hierarchical_summarizer.py  optimized_summarizer.py  service_registry.py  synthesis_engine.py
attached_assets/: Pasted--nltk-data-date-Debugger-is-active-Debugger-PIN-712-665-583-172-31-196-44-23-Ja-1737610225534.txt  Pasted-1-Describe-the-three-main-groups-of-Muslims-identified-in-the-text-and-explain-the-origin-of-their--1737624065508.txt  Pasted-172-31-196-44-23-Jan-2025-05-32-51-GET-static-script-js-HTTP-1-1-304-2025-01-23-05-32-55-1737610464495.txt  Pasted-Article-I-Article-I-Explained-Section-1-All-legislative-Powers-herein-granted-shall-be-vested-in-a-1737770477165.txt  Pasted-Collecting-Flask-2-1-0-from-r-requirements-txt-line-2-Using-cached-Flask-2-1-0-py3-none-any--1737607375160.txt  Pasted-Collecting-Flask-2-1-0-from-r-requirements-txt-line-2-Using-cached-Flask-2-1-0-py3-none-any--1737607453914.txt  Pasted-Model-TinyLLM-Browser-Temperature-0-7-Controls-randomness-of-output-Max-Tokens-10-10-Limits-r-1737712316857.txt  Pasted-Requirement-already-satisfied-Flask-2-1-0-in-pythonlibs-lib-python3-12-site-packages-from-r-r-1737607749481.txt  Pasted-SUM-Knowledge-Distiller-Confessions-of-a-British-Spy-and-British-Enmity-Against-Islam-Study-Guide--1737711662598.txt  Pasted-Summary-answer-key-1-text-identifies-sunni-ahl-as-sunna-shii-shiite-wahabi-najdis--1737624186983.txt  Pasted-test-generate-sentence-summary-Tests-test-sum-TestMagnumOpusSUM-test-generate-sentence-summary--1737623841698.txt  Pasted-test-generate-sentence-summary-Tests-test-sum-TestMagnumOpusSUM-test-generate-sentence-summary--1737623883827.txt  Pasted-test-generate-sentence-summary-Tests-test-sum-TestMagnumOpusSUM-test-generate-sentence-summary--1737624149007.txt
backup_local_changes/: CHANGELOG.md  CODING_STANDARDS.md  README.md  config_integration_example.py  config_manager.py  error_handling.py  integrated_config_example.py  nltk_utils.py  simple_config_example.py  test_config_manager.py  test_error_handling.py  test_nltk_utils.py  test_text_preprocessing.py  text_preprocessing.py
browser_extension/: BROWSER_EXTENSION_SUMMARY.md  README.md  test_extension.html
capture/: README.md  __init__.py  api_server.py  capture_engine.py  global_hotkey.py  launcher.py  requirements.txt
core/: __init__.py  analyzer.py  engine.py  processor.py
core-zig/: build.zig
deployment/: Dockerfile  docker-compose.yml  gunicorn_config.py  nginx.conf
docs/: AGENT_SURFACE_FINDINGS.md  ALGORITHM_REGISTRY.md  API_DOCUMENTATION.md  API_REFERENCE.md  AUDIT_LOG_FORMAT.md  BENCH_HARDENING_FROM_QCVV.md  BYOK_AND_FREE_PROVIDERS.md  CANONICAL_ABI_SPEC.md  CATEGORICAL_FOUNDATIONS.md  CHARTER_2026-05-17.md  CI_WIRING_TO_PASTE_2026-05-17.md  COMPATIBILITY_POLICY.md  COMPLEXITY_DIAL_DESIGN.md  COMPLIANCE_EU_AI_ACT_ARTICLE_12.md  COMPLIANCE_GDPR_ARTICLE_30.md  COMPLIANCE_HIPAA_164_312_B.md  COMPLIANCE_ISO_27001_8_15.md  COMPLIANCE_PCI_DSS_4_REQ_10.md  COMPLIANCE_SOC_2_CC_7_2.md  DEMO_RECORDING.md  DID_SETUP.md  DOGFOOD_FINDINGS_2026-05-17.md  DOGFOOD_FINDINGS_2026-05-18.md  DOGFOOD_FINDINGS_2026-05-28.md  DOGFOOD_FINDINGS_2026-05-29.md  DOGFOOD_FINDINGS_2026-06-04.md  DOGFOOD_FINDINGS_2026-06-06.md  DOGFOOD_QUICKSTART.md  (+63 more)
(+728 files in other folders)
