[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sum-engine"
version = "0.4.0"
description = "SUM — bidirectional knowledge distillation with optional cryptographic attestation. Pipe prose, get a CanonicalBundle (HMAC / Ed25519 / W3C VC 2.0), verify anywhere."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "ototao" }]
requires-python = ">=3.10"
keywords = [
    "knowledge-graph",
    "verifiable-credentials",
    "attestation",
    "godel-encoding",
    "semantic-web",
    "agent-cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security :: Cryptography",
    "Environment :: Console",
]
# Core dependencies — enough for the default `sum attest` and `sum verify`
# paths. Optional extras below add the heavy NLP / LLM paths.
dependencies = [
    "cryptography>=41.0.0",
    "sympy>=1.12",
]

[project.optional-dependencies]
# Dependency-injection extras. Users pick the extractor they want:
#   pip install sum-engine[sieve]   # deterministic, offline spaCy path
#   pip install sum-engine[llm]     # OpenAI structured-output path
#   pip install sum-engine[all]     # both, plus dev tooling
sieve = ["spacy>=3.7.0"]
llm = ["openai>=1.40.0,<3.0.0", "pydantic>=2.0.0"]
# Anthropic Messages-API adapter (Claude family). Installed alongside
# [llm] for the §2.5 frontier-LLM benchmark runs that compare
# generator-side interventions across providers. The runner picks
# OpenAI vs Anthropic by model-id prefix; both extras may be
# installed at the same time.
anthropic = ["anthropic>=0.97.0", "pydantic>=2.0.0"]
# Render-receipt verification (Phase E.1 v0.9.C). joserfc handles the
# detached-JWS / RFC 7797 b64=false machinery; the existing pure-Python
# JCS module at sum_engine_internal/infrastructure/jcs.py handles
# canonicalization. Cryptography is already a hard dep above.
receipt-verify = ["joserfc>=1.0.0"]
# MCP (Model Context Protocol) server. Exposes SUM verbs as MCP
# tools so any MCP-aware LLM client (Claude Desktop, Claude Code,
# Cursor, Continue, custom agents) can call SUM directly. The
# `mcp` package is the official Python SDK; FastMCP is its
# decorator-style high-level API. See docs/MCP_INTEGRATION.md.
mcp = ["mcp>=1.0.0"]
# Omni-format adapter. Markdown is the canonical pivot for the
# attest pipeline: any input format -> markdown -> existing
# extract/state/bundle path. Source URI anchors to the original
# bytes, not the markdown, so receipts remain bound to the
# artifact-as-shipped. markitdown is MIT, Microsoft-maintained,
# lean pure-Python core (beautifulsoup4 + markdownify + magika);
# heavy format-specific deps are gated behind its own extras.
#
# What this base extra brings in: HTML / DOCX-via-mammoth-not-
# included / plaintext / EPUB-without-pandoc / .ipynb / .json.
# For PDF/DOCX/XLSX/PPTX, install the matching markitdown extra
# (`pip install 'markitdown[pdf,docx,xlsx,pptx]==0.1.5'`) on top.
# Pinned hard to keep markdown output byte-identical for receipts.
omni-format = [
    "markitdown==0.1.5",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "types-setuptools",
    # Required to collect Tests/test_phase13_zenith.py, test_phase14_ouroboros.py,
    # test_phase15_abi.py, test_browser_extension.py — they reach through
    # api/quantum_router.py which imports jwt. In CI, requirements-prod.txt
    # pulls PyJWT in as a transitive; `pip install -e .[dev]` on a fresh
    # clone should not silently skip those four test files.
    "PyJWT>=2.8.0",
    "build>=1.0.0",
    # R0.4: Hypothesis property-based fuzz harness on JCS + verifier
    # surfaces. Tests live under Tests/test_property_*.py; without
    # this, those tests skip via pytest.importorskip and the property
    # coverage falls off.
    "hypothesis>=6.0.0",
]
all = [
    "sum-engine[sieve]",
    "sum-engine[llm]",
    "sum-engine[anthropic]",
    "sum-engine[receipt-verify]",
    "sum-engine[mcp]",
    "sum-engine[omni-format]",
    "sum-engine[dev]",
]

[project.scripts]
# `sum` on PATH after installation. Subcommands: attest, verify, resolve, version.
sum = "sum_cli.main:main"
# `sum-mcp` on PATH after `pip install sum-engine[mcp]`. Stdio-transport
# MCP server exposing extract / attest / verify / inspect / schema as
# tools. See docs/MCP_INTEGRATION.md for client wiring (Claude Desktop,
# Claude Code, Cursor, Continue).
sum-mcp = "sum_engine_internal.mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/OtotaO/SUM"
Repository = "https://github.com/OtotaO/SUM"
"Proof Boundary" = "https://github.com/OtotaO/SUM/blob/main/docs/PROOF_BOUNDARY.md"
"Feature Catalog" = "https://github.com/OtotaO/SUM/blob/main/docs/FEATURE_CATALOG.md"

[tool.check-wheel-contents]
# The wheel intentionally ships TWO top-level packages:
#   sum_cli                — the CLI entry point (provides the `sum`
#                            console script via [project.scripts]).
#   sum_engine_internal    — the implementation modules consumers
#                            `import` from (the public Python API).
# Without this whitelist, check-wheel-contents fires W009 on every
# build. Whitelisting by name (rather than ignoring W009 globally)
# preserves the gate: if a future build accidentally adds an
# unexpected third top-level package, this config still catches it.
toplevel = ["sum_cli", "sum_engine_internal"]

[tool.setuptools.packages.find]
# Include the CLI and the core engine modules it depends on. Tests and
# scripts are dev-time only and excluded from the distribution.
include = ["sum_cli*", "sum_engine_internal*"]
exclude = ["Tests*", "Tests.*", "scripts*", "api*", "single_file_demo*"]

[tool.setuptools.package-data]
# Ship nothing binary by default. spaCy models are user-installed via
# `python -m spacy download en_core_web_sm`.
"*" = ["py.typed"]
# Bundled frequency-table assets used by the slider renderer's
# audience-axis classifier (Phase E.1 STATE 5b).
"sum_engine_internal.ensemble.data" = ["*.txt"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
follow_imports = "silent"
explicit_package_bases = true
